--- a/rememmung_fe/src/App.css
+++ b/rememmung_fe/src/App.css
@@ -3,10 +3,14 @@
   height: 100vh;
 }
 
+@font-face {
+  font-family: "SebangGothic";
+  src: url("/SebangGothicRegular.woff2") format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Pretendard";
 }
 
 p {
@@ -14,14 +18,10 @@ p {
   margin-bottom: 1em;
 }
 
-@font-face {
-  font-family: "SEBANG Gothic";
-  src: url("../public/SEBANGGothic.ttf") format("woff2");
-}
-
 ::-webkit-scrollbar {
   width: 8px;
 }
+
 ::-webkit-scrollbar-thumb {
   background: #bababa;
   opacity: 0.6;
