--- a/rememmung_fe/src/App.css
+++ b/rememmung_fe/src/App.css
@@ -8,6 +8,11 @@
   src: url("/SebangGothicRegular.woff2") format("woff2");
 }
 
+@font-face {
+  font-family: "SBAggro";
+  src: url("/SBAggroLight.woff2") format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
